[package]
name = "bitcoin-bosd"
version = "0.1.0"
edition = "2021"
authors = [
  "Trey Del Bonis <trey@alpenlabs.io>",
  "Jose Storopoli <jose@alpenlabs.io>",
]
description = "Rust implementation of a Bitcoin binary output script descriptor (BOSD)"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/alpenlabs/bitcoin-bosd"
categories = ["cryptography::cryptocurrencies"]
keywords = ["crypto", "bitcoin"]

[features]
default = ["address", "serde"]
address = ["dep:bitcoin"]
serde = ["dep:serde"]
borsh = ["dep:borsh"]

[dependencies]
bitcoin = { version = "0.32.5", optional = true }
borsh = { version = "1.5.3", optional = true }
hex = { package = "hex-conservative", version = "0.2.1" } # for optimization keep in sync with bitcoin
serde = { version = "1.0.217", optional = true }
thiserror = "2.0.10"

[dev-dependencies]
bincode = "1.3.3"
serde_json = "1.0.135"

[profile.release]
opt-level = "z"   # Optimized for size, use 3 for speed
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduced to increase optimizations
panic = "abort"   # Abort on panic
strip = "symbols" # Strip symbols from binary

[[example]]
name = "psbt"
