[package]
name = "bitcoin-bosd-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.bitcoin-bosd]
path = ".."

[[bin]]
name = "from_bytes"
path = "fuzz_targets/from_bytes.rs"
test = false
doc = false
bench = false
